2-1-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-namespace
spec:
  finalizers:
  - kubernetes
status:
  phase: Active
